--- a/taxi-booking/src/components/details/style.css
+++ b/taxi-booking/src/components/details/style.css
@@ -26,8 +26,11 @@
     font-size: 14px;
     font-weight: 500;
     margin-top: 20px;
+    margin-bottom: 10px;
 }
-
+.form-elements input[type=date]{
+    width: 100%;
+}
 .form-elements input{
     padding: 1.3rem 1.5rem ;
     background-color: #f5f5f5;
